used fixed length function to ensure track name does not spill into next line in sidebar

--- a/src/components/sidebar/styles/sidebar-current-track.css
+++ b/src/components/sidebar/styles/sidebar-current-track.css
@@ -13,9 +13,7 @@
 .sidebar--current-track-name {
     font-size: 26px;
     font-weight: bold;
-    /* width: fit-content; */
-    max-width: 280px;
-    overflow: hidden;
+    width: fit-content;
 }
 
 .sidebar--current-track-name:hover {
